tutorial-tic-tac-toe

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,3 +110,10 @@ a {
   border-radius: 50%;
   color: red;
 }
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
